# fravenir

./: .gitignore  AGENTS.md  LICENSE  README.en.md  README.md  pyproject.toml
docs/: INDEX.en.md  INDEX.md
docs/design/: technical-design.en.md  technical-design.md
docs/operations/: admin_server.md  fravenir-admin@.service  fravenir-compact@.service  fravenir-compact@.timer  fravenir@.service  migrations.md  prompt_injection.md  systemd_timer.md
docs/setup/: quickstart.en.md  quickstart.md
examples/: README.en.md  README.md  config.yaml  seed.yaml
src/fravenir/: __init__.py  cli.py  embedding.py  server.py
src/fravenir/admin/: api.py  queries.py  schemas.py  (+1 more)
tests/: conftest.py
tests/golden/: extraction_golden.yaml  test_extraction_precision.py  test_search_golden.py
tests/integration/: test_compact.py  test_compact_use_llm.py  test_embedding_latency.py  test_extraction_pipeline.py  test_mcp_server.py  test_relation_contradiction.py  test_relation_direction.py  test_supersedes.py
tests/unit/: test_activation.py  test_cli.py  test_compact.py  test_curated_and_audit_migration.py  test_delete.py  test_embedding.py  test_explore.py  test_extraction.py  test_get.py  test_graph.py  test_judge_columns_migration.py  test_migrate.py  test_paths.py  test_relation_contradiction.py  test_relation_direction.py  test_resolve.py  test_resolved_at_migration.py  test_retry_extraction.py  test_schemas.py  test_search.py  test_self_cue.py  test_semantic_judge.py  test_sqlite_init.py  test_strip_code_fence.py  test_supersede.py  test_trace.py  test_vector.py  test_write.py
(+32 files in other folders)
