[project]
name = "fravenir"
version = "0.1.0"
description = "Character memory MCP server based on ACT-R activation"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.2",
    "fastapi>=0.110",
    "mcp>=1.27.0",
    "networkx>=3.0",
    "numpy>=2.4.4",
    "openai>=1.60.0",
    "pydantic>=2.13.3",
    "pyyaml>=6.0.3",
    "sentence-transformers>=5.4.1",
    "sqlite-vec>=0.1.9",
    "structlog>=25.5.0",
    "uvicorn[standard]>=0.27",
]

[project.scripts]
fravenir = "fravenir.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fravenir"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true

[[tool.mypy.overrides]]
module = "sqlite_vec"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "networkx"
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-m 'not slow and not golden_llm'"
markers = [
    "slow: marks tests as slow (model load required; skipped by default, run with -m slow)",
    "golden_llm: requires running LLM endpoint (skipped unless -m golden_llm)",
]

[dependency-groups]
dev = [
    "freezegun>=1.5.5",
    "mypy>=1.20.1",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.11",
    "types-pyyaml>=6.0.12.20260408",
    "vulture>=2.14",
]

[tool.vulture]
paths = ["src/fravenir"]
min_confidence = 80
